@@ -61,7 +61,6 @@
                 android:layout_weight="1"
                 android:maxLines="5"
                 android:minLines="2"
-                android:maxLength="140"
                 android:hint="@string/compose_tweet_hint"
                 android:inputType="textCapSentences|textMultiLine"/>
 
