@@ -186,7 +186,7 @@
                         android:hint="@string/reply"
                         android:textSize="14dp"
                         android:layout_marginBottom="8dp"
-                        android:inputType="textMultiLine"/>
+                        android:inputType="textMultiLine|textCapSentences"/>
 
                 <LinearLayout
                         android:orientation="vertical"
